Further work on Jakarta Data and NoSQL